# agents

./: pyproject.toml
agentduel_agents/: __init__.py  base.py
agentduel_agents.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agentduel_agents/examples/: aggressive_multi_agent.py  coin_flip_agent.py  er_diagnosis_simple_agent.py  mcat_quiz_simple_agent.py  multi_game_agent.py  nil_recruitment_agent.py  nil_recruitment_agent_v2.py  nil_recruitment_simple_agent.py  nuclear_war_agent.py  nuclear_war_simple_agent.py  openai_general_agent.py  passcode_simple_agent.py  random_agent.py  simple_agent.py  tit_for_tat_agent.py
